objects/LLC_BI__Product_Feature__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Term_Step__c</fullName>
        <description>The user populates this required number field to specify the number of payments between increases in interest rate after the teaser term passes.</description>
        <inlineHelpText>Enter the number of payments between increases in interest rates after the passed teaser term.</inlineHelpText>
        <label>Term Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tiered_Interest_Rate__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It designates the interest rate that applies to the corresponding tier.</description>
        <inlineHelpText>The interest rate that applies to the corresponding tier.</inlineHelpText>
        <label>Tiered Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tiered_Margin_Percent__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the percentage that is added to (or subtracted from) the index to determine the applicable rate for a given account tier with variable rate tiers. If the margin will be subtracted from the index, this value would be negative. If the margin will be added to the index this value will be positive.</description>
        <inlineHelpText>The percentage that is added to (or subtracted from) the index to determine the applicable rate for a given account tier with variable rate tiers.</inlineHelpText>
        <label>Tiered Margin Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. When importing data into nCino, the field can also be used to efficiently associate related records without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>type_product__c</fullName>
        <description>a combination of product type and product for mapping to correct products.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>type-product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Feature</label>
    <nameField>
        <displayFormat>Product_Feature-{00000}</displayFormat>
        <label>Product Feature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>